# training-shop-site

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
additional_resources/: import_orders_example.csv
mysite/blogapp/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/fixtures/: blogapp-test-data-fixture.json
mysite/blogapp/management/commands/: load_blogapp_test_data.py
mysite/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_article_author.py  0006_article_category.py  0007_article_tags.py  0008_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_create.html  article_detail.html  article_list.html  article_update.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/myauth/: models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_user.py  0004_order_products.py  0005_rename_address_order_delivery_address_and_more.py  0006_alter_product_options.py  0007_product_created_by.py  0008_order_receipt.py  0011_alter_order_options_alter_product_options.py
mysite/templates/: base.html
(+27 files in other folders)
